# maplecast-flycast

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile.headless  Dockerfile.node  README.md  SECURITY.md  imgui.ini  maplecast-client.sh  run_replay.sh  start_maplecast.bat  start_maplecast.sh  test_ws_client.cpp  verify_results.csv
core/: build.h  emulator.cpp  nullDC.cpp
core/audio/: audiobackend_sdl2.cpp  audiostream.cpp  audiostream.h
core/input/: gamepad_device.cpp  gamepad_device.h
core/linux/: common.cpp
core/linux-dist/: main.cpp
core/network/: CMakeLists.txt  gen_ptx_header.py  ggpo.cpp  hub_discovery.cpp  hub_discovery.h  maplecast.cpp  maplecast.h  maplecast_audio.cpp  maplecast_audio_client.cpp  maplecast_audio_client.h  maplecast_audio_ws.cpp  maplecast_audio_ws.h  maplecast_client.cpp  maplecast_client.h  maplecast_compress.h  maplecast_control_ws.cpp  maplecast_control_ws.h  maplecast_evdev_input.cpp  maplecast_evdev_input.h  maplecast_gamestate.cpp  maplecast_gamestate.h  maplecast_gs_loopback.cpp  maplecast_gs_loopback.h  maplecast_input_server.cpp  maplecast_input_server.h  (+47 more)
deploy/: node-entrypoint.sh
docs/: ARCHITECTURE.md  COMPETITIVE-CLIENT.md  DEPLOYMENT.md  DEVELOPER-GUIDE.md  HANDOFF-KING-APP.md  HANDOFF-KING-INTEGRATION.md  HANDOFF-MIRROR-OPTIMIZED.md  HANDOFF-MIRROR.md  HANDOFF-RENDERER.md  HANDOFF-WASM-CLIENT.md  HANDOFF-WASM-WORKING.md  INPUT-LATCH.md  MVC2-MEMORY-MAP.md  NAOMI-SPIKE.md  PUTYOURQUARTERUP.md  SKIN-SYSTEM.md  STREAMING-OPTIONS.md  VPS-SETUP.md  WASM-BUILD-GUIDE.md  WEBGPU-RENDERER.md  WORKSTREAM-HEADLESS-SERVER.md  WORKSTREAM-KING-OF-MARVEL.md  WORKSTREAM-LATENCY.md  WORKSTREAM-NATIVE-CLIENT.md  WORKSTREAM-OVERLORD.md
hub/: Cargo.toml
hub/src/: api.rs  geo.rs  main.rs  matchmaker.rs  replays.rs  schema.surql  types.rs
relay/: Cargo.toml  deploy.sh
relay/src/: admin_api.rs  auth_api.rs  client_telemetry.rs  fanout.rs  hub_client.rs  main.rs  protocol.rs  signaling.rs  splice.rs  turn.rs  webtransport.rs
scripts/: install-deps.sh  quickstart.sh  setup-home-tls.sh
tests/: dash_repeatability_test.cpp  input_accumulator_test.cpp  input_atomic_smoke.cpp
tools/: evdev-mapper.c  find_rom_in_mem.py  import_skins.py  inject_dci.py  inject_palette_test.py  inject_test_multi.py  palette_diff.py  scan_dcram_deep.py  scan_pvr_palette.py  skins_export.json  test_stream.py  test_stream_save.py
web/: bios  client-settings.html  delta-test.html  ejs-data  emulator.html  gs-sync-test.html  index.html  king.html  mirror-client.html  mirror-wasm.html  mvc2.state  network.html  overlay.html  pcm-worklet.js  play.html  player.html  proxy.py  register.html  relay.js  renderer.mjs  renderer.wasm  replay.html  replays.html  roms  schema.surql  serve.py  skin-picker.html  spectate.html  telemetry.py  test-renderer.html  wasm.html  webgpu-test.html
web/collector/: Cargo.toml
web/collector/src/: main.rs
(+123 files in other folders)
