[package]
name = "maplecast-hub"
version = "0.1.0"
edition = "2024"
description = "Distributed node registry + matchmaker for MapleCast — OVERKILL IS NECESSARY"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
