[package]
name = "maplecast-relay"
version = "0.1.0"
edition = "2024"
description = "Zero-copy splice-based TA stream relay — OVERKILL IS NECESSARY"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26" }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
nix = { version = "0.30", features = ["fs", "zerocopy"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
wtransport = "0.7"
rustls-pemfile = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
