[package]
name = "maplecast-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "3", features = ["kv-mem", "kv-rocksdb"] }

[profile.release]
opt-level = 3
lto = true
